Basic event handling
This is how events should be set up in a simple environment, but does not
work for multi-threading

--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -16,7 +16,7 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{BC8A1FFA-BEE3-4634-8014-F334798102B3};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <PackageCertificateKeyFile>Catch_TemporaryKey.pfx</PackageCertificateKeyFile>
-    <NuGetPackageImportStamp>a52ea93e</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>bda29af0</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -122,6 +122,7 @@
       <SubType>Designer</SubType>
     </AppxManifest>
     <None Include="Catch_TemporaryKey.pfx" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Logo.scale-100.png" />
