--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Models\IMovable.cs" />
     <Compile Include="Models\PointerData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaskExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
