--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\Win2D.0.0.12\build\win\Win2D.props" Condition="Exists('..\packages\Win2D.0.0.12\build\win\Win2D.props')" />
+  <Import Project="..\packages\Win2D-debug.0.0.13-local\build\Win2D-debug.props" Condition="Exists('..\packages\Win2D-debug.0.0.13-local\build\Win2D-debug.props')" />
+  <Import Project="..\packages\Win2D.0.0.13-local\build\win\Win2D.props" Condition="Exists('..\packages\Win2D.0.0.13-local\build\win\Win2D.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -16,7 +17,7 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{BC8A1FFA-BEE3-4634-8014-F334798102B3};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <PackageCertificateKeyFile>Catch_TemporaryKey.pfx</PackageCertificateKeyFile>
-    <NuGetPackageImportStamp>bda29af0</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>b2142206</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -147,7 +148,7 @@
   <ItemGroup>
     <Reference Include="Microsoft.Graphics.Canvas, Version=255.255.255.255, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Win2D.0.0.12\lib\win\Microsoft.Graphics.Canvas.winmd</HintPath>
+      <HintPath>..\packages\Win2D.0.0.13-local\lib\win\Microsoft.Graphics.Canvas.winmd</HintPath>
     </Reference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
@@ -158,10 +159,11 @@
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Win2D.0.0.12\build\win\Win2D.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Win2D.0.0.12\build\win\Win2D.props'))" />
-    <Error Condition="!Exists('..\packages\Win2D.0.0.12\build\win\Win2D.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Win2D.0.0.12\build\win\Win2D.targets'))" />
+    <Error Condition="!Exists('..\packages\Win2D.0.0.13-local\build\win\Win2D.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Win2D.0.0.13-local\build\win\Win2D.props'))" />
+    <Error Condition="!Exists('..\packages\Win2D.0.0.13-local\build\win\Win2D.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Win2D.0.0.13-local\build\win\Win2D.targets'))" />
+    <Error Condition="!Exists('..\packages\Win2D-debug.0.0.13-local\build\Win2D-debug.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Win2D-debug.0.0.13-local\build\Win2D-debug.props'))" />
   </Target>
-  <Import Project="..\packages\Win2D.0.0.12\build\win\Win2D.targets" Condition="Exists('..\packages\Win2D.0.0.12\build\win\Win2D.targets')" />
+  <Import Project="..\packages\Win2D.0.0.13-local\build\win\Win2D.targets" Condition="Exists('..\packages\Win2D.0.0.13-local\build\win\Win2D.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
