--- a/Catch/packages.config
+++ b/Catch/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Win2D" version="0.0.12" targetFramework="win81" />
+  <package id="Win2D" version="0.0.13-local" targetFramework="win81" />
+  <package id="Win2D-debug" version="0.0.13-local" targetFramework="win81" />
 </packages>
