--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Models\BasicPath.cs" />
     <Compile Include="Models\BlockMob.cs" />
     <Compile Include="Models\EmptyBrain.cs" />
+    <Compile Include="Models\GunTower.cs" />
     <Compile Include="Models\PathMobAgent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RectExtensions.cs" />
