--- a/CatchTests/CatchTests.csproj
+++ b/CatchTests/CatchTests.csproj
@@ -115,6 +115,7 @@
   <ItemGroup>
     <Compile Include="BasicMapTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TileDirectionTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
