--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -129,8 +129,8 @@
     <Compile Include="Base\IMob.cs" />
     <Compile Include="Base\IModifier.cs" />
     <Compile Include="Base\IModifierCollection.cs" />
-    <Compile Include="Base\IPath.cs" />
     <Compile Include="Base\ITower.cs" />
+    <Compile Include="Base\MapPath.cs" />
     <Compile Include="Base\StyleArgs.cs" />
     <Compile Include="Base\TileDirection.cs" />
     <Compile Include="CanvasUtils.cs" />
@@ -146,7 +146,6 @@
     <Compile Include="Models\BasicIndicatorCollection.cs" />
     <Compile Include="Models\BasicMap.cs" />
     <Compile Include="Models\BasicMob.cs" />
-    <Compile Include="Models\BasicPath.cs" />
     <Compile Include="Models\BasicTower.cs" />
     <Compile Include="Models\BlockMob.cs" />
     <Compile Include="Models\EmptyBrain.cs" />
