--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -108,6 +108,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Base\AttackSpecs.cs" />
+    <Compile Include="Base\Mob.cs" />
     <Compile Include="Base\CreateResourcesArgs.cs" />
     <Compile Include="Base\DefenceSpecs.cs" />
     <Compile Include="Base\DrawArgs.cs" />
@@ -126,7 +127,6 @@
     <Compile Include="Base\IIndicatorCollection.cs" />
     <Compile Include="Base\IMap.cs" />
     <Compile Include="Base\IMapProvider.cs" />
-    <Compile Include="Base\IMob.cs" />
     <Compile Include="Base\IModifier.cs" />
     <Compile Include="Base\IModifierCollection.cs" />
     <Compile Include="Base\ITower.cs" />
@@ -145,7 +145,6 @@
     <Compile Include="Models\BasicHexTile.cs" />
     <Compile Include="Models\BasicIndicatorCollection.cs" />
     <Compile Include="Models\BasicMap.cs" />
-    <Compile Include="Models\BasicMob.cs" />
     <Compile Include="Models\BasicTower.cs" />
     <Compile Include="Models\BlockMob.cs" />
     <Compile Include="Models\EmptyBrain.cs" />
