--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -147,13 +147,13 @@
     <Compile Include="Models\BlockMob.cs" />
     <Compile Include="Models\EmptyBrain.cs" />
     <Compile Include="Models\GunTower.cs" />
+    <Compile Include="Models\HexagonGraphics.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RectExtensions.cs" />
     <Compile Include="Services\CompiledConfig.cs" />
     <Compile Include="Services\EmptyConfig.cs" />
     <Compile Include="Services\IConfig.cs" />
     <Compile Include="TaskExtensions.cs" />
-    <Compile Include="Win2d\BasicHexTileGraphics.cs" />
     <Compile Include="Win2d\PointerData.cs" />
     <Compile Include="Win2d\Win2dProvider.cs" />
   </ItemGroup>
