Created AgentBase from Tower,Mob
Tower and Mob were nearly identical, so a new abstract base class was
created for them to take off from.

--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -107,6 +107,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Base\AgentBase.cs" />
     <Compile Include="Base\AttackSpecs.cs" />
     <Compile Include="Base\Map.cs" />
     <Compile Include="Base\IndicatorCollection.cs" />
