--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -108,7 +108,8 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Base\AgentBase.cs" />
-    <Compile Include="Base\AttackSpecs.cs" />
+    <Compile Include="Base\AttackSpecModel.cs" />
+    <Compile Include="Base\BaseSpecModel.cs" />
     <Compile Include="Base\Map.cs" />
     <Compile Include="Base\IndicatorCollection.cs" />
     <Compile Include="Base\Targetting.cs" />
@@ -116,7 +117,7 @@
     <Compile Include="Base\Tower.cs" />
     <Compile Include="Base\Mob.cs" />
     <Compile Include="Base\CreateResourcesArgs.cs" />
-    <Compile Include="Base\DefenceSpecs.cs" />
+    <Compile Include="Base\DefenceSpecModel.cs" />
     <Compile Include="Base\DrawArgs.cs" />
     <Compile Include="Base\DrawLayer.cs" />
     <Compile Include="Base\HexCoords.cs" />
